ci-cd-pipeline/mysql/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-mysql-svc
  name: my-mysql-svc
spec:
  ports:
  - name: mariadb
    port: 3306
    protocol: TCP
    targetPort: 3306
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-mysql
  type: ClusterIP
